tests/NormalTests/paczka1/small_fuzzy/25278453.err
Error in line 8: A96 A98 39,5
Error in line 10: 0uB7BCxZ S65 57,9
